592067:TISSQAUAT-3423:Other seller page - EMI pop up UI alignment is not proper in Mobile and Tablet view issue fix

--- a/ext/marketplace/marketplacestorefront/web/webroot/_ui/responsive/theme-blue/css/style.css
+++ b/ext/marketplace/marketplacestorefront/web/webroot/_ui/responsive/theme-blue/css/style.css
@@ -66214,3 +66214,9 @@ body .right-account .order-history .cancellation-request-block .return-form .clo
 .checkout.wrapper .product-block.addresses.new-form li.item fieldset div.half:nth-child(even){
 	float: none;
 }
+.product-detail .Emi .modal-content .Close{
+	border-radius: 0px;
+	border: none !important;
+	margin-right: 0px !important;
+    margin-top: 0px !important;
+}
